# pedit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: editor.rs  lines_editor.rs  main.rs
